# rsrch

./: .env.example  .gitignore  CLAUDE.md  CODEREVIEW_PARALLELIZATION.md  QUICKSTART.md  README.md  WARP.md  __init__.py  cli.py  config.py  llm_client.py  models.py  parallelization_plan.md  pipeline.py  pyproject.toml  remediation.md  requirements.txt  scraper_summarizer_plan.md  setup.py  test_context_assembly.py  test_detector.py  test_llm_retry.py  test_model_routing.py  test_researcher.py  test_scraper.py  test_scraper_tables.py  test_scraper_url.py  test_setup.py  test_summarizer.py  test_tables.py  test_temporal_verification.py
.note/: project_memory.md  session_log.md
docs/: DEVELOPMENT_SETUP.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_STATUS.md  PROJECT_SUMMARY.md  QUICK_TEST.md  RESEARCHER_IMPLEMENTATION.md  RETRY_IMPLEMENTATION.md  SCRAPER_FIX.md  SCRAPING_COMPARISON.md  SCRAPING_RECOMMENDATION.md  SCRAPING_STRATEGY_FINAL.md  SERPER_MCP_USAGE.md  TEMPORAL_VERIFICATION_FIX.md  claim_verification.md  llm_retry.md  model_routing.md  pipeline.md  source_grounding.md
examples/: richest_person.md  tts_report.md
stages/: __init__.py  content_detector.py  context_assembler.py  intent_classifier.py  planner.py  reflector.py  reranker.py  researcher.py  scraper.py  summarizer.py  verifier.py
